--- a/portafolio.html
+++ b/portafolio.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Simon Gongora</title>
+    <link href="/assets/img/favicon.ico" rel="icon" type="image/x-icon" />
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
