--- a/portafolio.html
+++ b/portafolio.html
@@ -62,26 +62,17 @@
         <div class="row">
 
             <div class="col-6 sm-6 lg-6">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel nostrum non voluptate reprehenderit
+                <p class="aboutme">about me</p>
+                <p class="aboutdesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel nostrum non voluptate reprehenderit
                     tenetur aliquid? Harum consequatur est recusandae velit sunt? Nostrum voluptatibus quidem numquam
                     pariatur ratione, odio, repellendus sequi aperiam eaque nisi mollitia. Eius velit ullam repellat
                     excepturi amet, suscipit libero? Ipsam totam odio aliquam pariatur modi animi et quisquam enim
-                    maxime! Sapiente omnis dignissimos accusamus voluptatum numquam debitis aspernatur, obcaecati
-                    pariatur est, facere officiis consequuntur quae saepe itaque nostrum eveniet maxime? Architecto
-                    reprehenderit quidem, obcaecati vero ex sapiente? Provident, nulla mollitia sapiente sunt libero
-                    dignissimos nobis optio, excepturi eligendi nam eum debitis iure, error harum consequuntur
-                    voluptatem consequatur!</p>
+                    maxime! Sapiente omnis dignissimos accusamus voluptatum numquam debitis aspernatur!</p>
             </div>
 
             <div class="col-6 sm-6 lg-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus rem nulla ea molestias quis sequi
-                    dolores! Dolorem nemo quasi fuga ducimus ab, dignissimos consequuntur eaque repellendus, ratione
-                    repudiandae error fugit voluptatibus impedit neque, cumque nostrum odio! In, numquam temporibus
-                    necessitatibus illum enim natus officiis quasi error dolorum earum minus reiciendis odio nostrum
-                    adipisci excepturi similique blanditiis id, vitae dicta eaque velit! Quia esse ipsum, nulla quasi
-                    minima molestias quas cum similique dolorem voluptates illo cumque ab commodi, consequatur voluptas
-                    excepturi ratione soluta saepe enim accusamus ad. Fuga magnam nihil pariatur corrupti numquam,
-                    tenetur totam? Voluptatibus maxime nulla excepturi ex. Iusto?</p>
+            <img id="gif2" src="/assets/img/k9.gif" alt="a">
+            
             </div>
         </div>
     </div>
