--- a/portafolio.html
+++ b/portafolio.html
@@ -21,7 +21,7 @@
 
 <body>
     <section class="main">
-        <div class="picture">
+        <div class="img-fluid picture">
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid ">
                     <a class="navbar-brand" href="#">SIMON GONGORA / MATRIX DEVELOPER</a>
@@ -42,11 +42,11 @@
             </nav>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-7  col-sm-7 col-lg-7  oficio">
+                    <div class="col-7  col-sm-12 col-lg-7  oficio">
                         <p class="graphic">graphic</p>
                         <p class="designer">DESIGNER<br>WEB<br>DEVELOPER</p>
                     </div>
-                    <div class="col-5 col-sm-5 col-lg-5  descripcion">
+                    <div class="col-5 col-sm-12 col-lg-5  descripcion">
                         <img id="gif" src="/assets/img/akira.gif" alt="A">
                         <p class="desc">I AM A DEVELOPER AND GRAPHIC DESIGNER BASED IN CHILE. I HAVE MANY YEARS OF
                             EXPERIENCE IN DESIGN. I LOVE ART IN ALL KIND OF FORMS. I LOVE GAMES, BURGERS AND SODA.</p>
@@ -57,25 +57,31 @@
         </div>
         </div>
     </section>
+    <section class="abme">
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-6 sm-6 lg-6">
+                    <p class="aboutme">about me</p>
+                    <p class="aboutdesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel nostrum non
+                        voluptate
+                        reprehenderit
+                        tenetur aliquid? Harum consequatur est recusandae velit sunt? Nostrum voluptatibus quidem
+                        numquam
+                        pariatur ratione, odio, repellendus sequi aperiam eaque nisi mollitia. Eius velit ullam repellat
+                        excepturi amet, suscipit libero? Ipsam totam odio aliquam pariatur modi animi et quisquam enim
+                        maxime! Sapiente omnis dignissimos accusamus voluptatum numquam debitis aspernatur!</p>
+                </div>
+                <div class="col-6 sm-6 lg-6">
+                    <img class="img-fluid gif2"src="/assets/img/k9.gif" alt="a">
 
-    <div class="container mt-5">
-        <div class="row">
-
-            <div class="col-6 sm-6 lg-6">
-                <p class="aboutme">about me</p>
-                <p class="aboutdesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel nostrum non voluptate reprehenderit
-                    tenetur aliquid? Harum consequatur est recusandae velit sunt? Nostrum voluptatibus quidem numquam
-                    pariatur ratione, odio, repellendus sequi aperiam eaque nisi mollitia. Eius velit ullam repellat
-                    excepturi amet, suscipit libero? Ipsam totam odio aliquam pariatur modi animi et quisquam enim
-                    maxime! Sapiente omnis dignissimos accusamus voluptatum numquam debitis aspernatur!</p>
-            </div>
-
-            <div class="col-6 sm-6 lg-6">
-            <img id="gif2" src="/assets/img/k9.gif" alt="a">
-            
+                </div>
             </div>
         </div>
+    </section>
+    <div class="container-fluid">
+        <div class="row"></div>
     </div>
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
