--- a/portafolio.html
+++ b/portafolio.html
@@ -4,6 +4,7 @@
 <head>
     <title>Simon Gongora</title>
     <link href="/assets/img/favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -72,23 +73,60 @@
                         maxime! Sapiente omnis dignissimos accusamus voluptatum numquam debitis aspernatur!</p>
                 </div>
                 <div class="col-6 sm-6 lg-6">
-                    <img class="img-fluid gif2"src="/assets/img/k9.gif" alt="a">
+                    <img class="img-fluid gif2" src="/assets/img/k9.gif" alt="a">
 
                 </div>
             </div>
         </div>
     </section>
-    <div class="container-fluid">
-        <div class="row"></div>
-    </div>
-
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
+    <section class="worksection">
+        <div class="container-fluid mt-5 mb-5">
+            <p class="works">works</p>
+            <div class="row">
+                <div class="col align-self-start col-sm-12 col-lg-4">
+                    <div class="card bg-dark text-white">
+                        <a href="https://www.instagram.com/"><img src="/assets/img/iguanaejemplo.png" class="card-img"
+                                alt="...">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">Iguana Page</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col align-self-center col-sm-12 col-lg-4">
+                <div class="card bg-dark text-white">
+                    <a href="https://www.instagram.com/"><img src="/assets/img/landingejemplo.png" class="card-img"
+                            alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Landing Page</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col align-self-end col-sm-12 col-lg-4">
+            <div class="card bg-dark text-white">
+                <a href="https://www.instagram.com/"><img src="/assets/img/cupponejemplo.png" class="card-img"
+                        alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Cuppon</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                </a>
+            </div>
+        </div>
+        </div>
+        </div>
+        </div>
+    </section>
+    <footer>
+        <p class="footer">
+            ARE YOU MINDING A PROJECT? <a id="contacto" href="https://www.instagram.com">CONTACT ME</a> 
+        </p>
+      </footer>
 </body>
 
 </html>
