--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <section class="main">
         <div class="img-fluid picture">
-            <nav class="navbar navbar-expand-lg ">
+            <nav class="navbar fixed-top navbar-expand-lg ">
                 <div class="container-fluid ">
                     <a class="navbar-brand" href="#">SIMON GONGORA / MATRIX DEVELOPER</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -43,12 +43,12 @@
             </nav>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-7  col-sm-12 col-lg-7  oficio">
+                    <div class="col-7  col-sm-7 col-lg-7  oficio">
                         <p class="graphic">graphic</p>
-                        <p class="designer">DESIGNER<br>WEB<br>DEVELOPER</p>
+                        <p class ="designer" >DESIGNER<br>WEB<br>DEVELOPER</p>
                     </div>
-                    <div class="col-5 col-sm-12 col-lg-5  descripcion">
-                        <img id="gif" src="/assets/img/akira.gif" alt="A">
+                    <div class="col-5 col-sm-5 col-lg-5  descripcion">
+                        <img class="img-fluid gif" src="/assets/img/akira.gif" alt="A">
                         <p class="desc">I AM A DEVELOPER AND GRAPHIC DESIGNER BASED IN CHILE. I HAVE MANY YEARS OF
                             EXPERIENCE IN DESIGN. I LOVE ART IN ALL KIND OF FORMS. I LOVE GAMES, BURGERS AND SODA.</p>
                         <p class="contactme"><a href="https://www.instagram.com">CONTACT ME</a></p>
@@ -70,7 +70,7 @@
                         numquam
                         pariatur ratione, odio, repellendus sequi aperiam eaque nisi mollitia. Eius velit ullam repellat
                         excepturi amet, suscipit libero? Ipsam totam odio aliquam pariatur modi animi et quisquam enim
-                        maxime! Sapiente omnis dignissimos accusamus voluptatum numquam debitis aspernatur!</p>
+                        maxime!</p>
                 </div>
                 <div class="col-6 sm-6 lg-6">
                     <img class="img-fluid gif2" src="/assets/img/k9.gif" alt="a">
@@ -89,8 +89,7 @@
                                 alt="...">
                             <div class="card-img-overlay">
                                 <h5 class="card-title">Iguana Page</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">This is a wider card.</p>
                         </a>
                     </div>
                 </div>
@@ -101,8 +100,7 @@
                             alt="...">
                         <div class="card-img-overlay">
                             <h5 class="card-title">Landing Page</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">This is a wider card.</p>
                     </a>
                 </div>
             </div>
@@ -113,8 +111,7 @@
                         alt="...">
                     <div class="card-img-overlay">
                         <h5 class="card-title">Cuppon</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text">This is a wider card.</p>
                 </a>
             </div>
         </div>
