responsive-texts-imgs

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </nav>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-7  col-sm-7 col-lg-7  oficio">
+                    <div class="col-7 col-xs-12 col-sm-12 col-lg-7  oficio">
                         <p class="graphic">graphic</p>
                         <p class ="designer" >DESIGNER<br>WEB<br>DEVELOPER</p>
                     </div>
-                    <div class="col-5 col-sm-5 col-lg-5  descripcion">
+                    <div class="col-5 col-xs-12 col-sm-12 col-lg-5  descripcion">
                         <img class="img-fluid gif" src="/assets/img/akira.gif" alt="A">
                         <p class="desc">I AM A DEVELOPER AND GRAPHIC DESIGNER BASED IN CHILE. I HAVE MANY YEARS OF
                             EXPERIENCE IN DESIGN. I LOVE ART IN ALL KIND OF FORMS. I LOVE GAMES, BURGERS AND SODA.</p>
@@ -61,7 +61,7 @@
     <section class="abme">
         <div class="container mt-5">
             <div class="row">
-                <div class="col-6 sm-6 lg-6">
+                <div class="col-6 col-sm-12 col-lg-6">
                     <p class="aboutme">about me</p>
                     <p class="aboutdesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel nostrum non
                         voluptate
@@ -72,7 +72,7 @@
                         excepturi amet, suscipit libero? Ipsam totam odio aliquam pariatur modi animi et quisquam enim
                         maxime!</p>
                 </div>
-                <div class="col-6 sm-6 lg-6">
+                <div class="col-6 col-sm-12 col-lg-6">
                     <img class="img-fluid gif2" src="/assets/img/k9.gif" alt="a">
 
                 </div>
@@ -83,7 +83,7 @@
         <div class="container-fluid mt-5 mb-5">
             <p class="works">works</p>
             <div class="row">
-                <div class="col align-self-start col-sm-12 col-lg-4">
+                <div class="col align-self-start col-xs-12 col-sm-12 col-md-12 col-lg-4">
                     <div class="card bg-dark text-white">
                         <a href="https://www.instagram.com/"><img src="/assets/img/iguanaejemplo.png" class="card-img"
                                 alt="...">
@@ -94,7 +94,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col align-self-center col-sm-12 col-lg-4">
+            <div class="col align-self-center col-xs-12 col-sm-12 col-md-12 col-lg-4">
                 <div class="card bg-dark text-white">
                     <a href="https://www.instagram.com/"><img src="/assets/img/landingejemplo.png" class="card-img"
                             alt="...">
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <div class="col align-self-end col-sm-12 col-lg-4">
+        <div class="col align-self-end col-xs-12 col-sm-12 col-md-12 col-lg-4">
             <div class="card bg-dark text-white">
                 <a href="https://www.instagram.com/"><img src="/assets/img/cupponejemplo.png" class="card-img"
                         alt="...">
