navbar-burger-working

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&family=Press+Start+2P&family=Source+Code+Pro:wght@200;300;400&family=Space+Mono:wght@700&display=swap"
         rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/portafolio.css">
 </head>
 
@@ -45,7 +48,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7  oficio">
                         <p class="graphic">graphic</p>
-                        <p class ="designer" >DESIGNER<br>WEB<br>DEVELOPER</p>
+                        <p class="designer">DESIGNER<br>WEB<br>DEVELOPER</p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5  descripcion">
                         <img class="img-fluid gif" src="/assets/img/akira.gif" alt="A">
@@ -121,9 +124,9 @@
     </section>
     <footer>
         <p class="footer">
-            ARE YOU MINDING A PROJECT? <a id="contacto" href="https://www.instagram.com">CONTACT ME</a> 
+            ARE YOU MINDING A PROJECT? <a id="contacto" href="https://www.instagram.com">CONTACT ME</a>
         </p>
-      </footer>
+    </footer>
 </body>
 
 </html>
