--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <nav class="navbar fixed-top navbar-expand-lg ">
                 <div class="container-fluid ">
                     <a class="navbar-brand" href="#">SIMON GONGORA / MATRIX DEVELOPER</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
