works-upload-pages

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="row">
                 <div class="col align-self-start col-xs-12 col-sm-12 col-md-12 col-lg-4">
                     <div class="card bg-dark text-white">
-                        <a href="https://www.instagram.com/"><img src="/assets/img/iguanaejemplo.png" class="card-img"
+                        <a href="/pages/iguana.html"><img src="/assets/img/iguanaejemplo.png" class="card-img"
                                 alt="...">
                             <div class="card-img-overlay">
                                 <h5 class="card-title">Iguana Page</h5>
@@ -99,7 +99,7 @@
             </div>
             <div class="align-self-center col-xs-12 col-sm-12 col-md-12 col-lg-4">
                 <div class="card bg-dark text-white">
-                    <a href="https://www.instagram.com/"><img src="/assets/img/landingejemplo.png" class="card-img"
+                    <a href="/pages/landingpage.html"><img src="/assets/img/landingejemplo.png" class="card-img"
                             alt="...">
                         <div class="card-img-overlay">
                             <h5 class="card-title">Landing Page</h5>
@@ -110,7 +110,7 @@
         </div>
         <div class="align-self-end col-xs-12 col-sm-12 col-md-12 col-lg-4">
             <div class="card bg-dark text-white">
-                <a href="https://www.instagram.com/"><img src="/assets/img/cupponejemplo.png" class="card-img"
+                <a href="/pages/cuppon.html"><img src="/assets/img/cupponejemplo.png" class="card-img"
                         alt="...">
                     <div class="card-img-overlay">
                         <h5 class="card-title">Cuppon</h5>
