--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>SIMON GONGORA</title>
+    <title>♥</title>
     <link href="/assets/img/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Required meta tags -->
@@ -28,7 +28,7 @@
         <div class="img-fluid picture">
             <nav class="navbar fixed-top navbar-expand-lg ">
                 <div class="container-fluid ">
-                    <a class="navbar-brand" href="#">SIMON GONGORA / MATRIX DEVELOPER</a>
+                    <a class="navbar-brand" href="index.html">SIMON GONGORA / MATRIX DEVELOPER</a>
                     <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -36,10 +36,10 @@
                     </button>
                     <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                         <div class="navbar-nav ms-auto ">
-                            <a class="nav-link active" aria-current="page" href="#">home</a>
-                            <a class="nav-link" href="#">work</a>
-                            <a class="nav-link" href="#">about</a>
-                            <a class="nav-link" href="#">spotify</a>
+                            <a class="nav-link active" aria-current="page" href="/index.html">home</a>
+                            <a class="nav-link" href="#worksection">work</a>
+                            <a class="nav-link" href="#abme">about</a>
+                            <a class="nav-link" href="https://open.spotify.com/playlist/2GKWVcemN1K2H7Tx6b4IkJ">spotify</a>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
         </div>
         </div>
     </section>
-    <section class="abme">
+    <section id="abme">
         <div class="container mt-5">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
@@ -82,7 +82,7 @@
             </div>
         </div>
     </section>
-    <section class="worksection">
+    <section id="worksection">
         <div class="container-fluid mt-5 mb-5">
             <p class="works">works</p>
             <div class="row">
@@ -110,8 +110,7 @@
         </div>
         <div class="align-self-end col-xs-12 col-sm-12 col-md-12 col-lg-4">
             <div class="card bg-dark text-white">
-                <a href="/pages/cuppon.html"><img src="/assets/img/cupponejemplo.png" class="card-img"
-                        alt="...">
+                <a href="/pages/cuppon.html"><img src="/assets/img/cupponejemplo.png" class="card-img" alt="...">
                     <div class="card-img-overlay">
                         <h5 class="card-title">Cuppon</h5>
                         <p class="card-text">This is a wider card.</p>
