--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                         <div class="navbar-nav ms-auto ">
                             <a class="nav-link active" aria-current="page" href="/index.html">home</a>
-                            <a class="nav-link" href="#worksection">work</a>
                             <a class="nav-link" href="#abme">about</a>
+                            <a class="nav-link" href="#worksection">works</a>
                             <a class="nav-link" href="https://open.spotify.com/playlist/2GKWVcemN1K2H7Tx6b4IkJ">spotify</a>
                         </div>
                     </div>
