--- a/index.html
+++ b/index.html
@@ -66,14 +66,8 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <p class="aboutme">about me</p>
-                    <p class="aboutdesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel nostrum non
-                        voluptate
-                        reprehenderit
-                        tenetur aliquid? Harum consequatur est recusandae velit sunt? Nostrum voluptatibus quidem
-                        numquam
-                        pariatur ratione, odio, repellendus sequi aperiam eaque nisi mollitia. Eius velit ullam repellat
-                        excepturi amet, suscipit libero? Ipsam totam odio aliquam pariatur modi animi et quisquam enim
-                        maxime!</p>
+                    <p class="aboutdesc">I´ve spent the past 10+ years working across different areas of digital design; branding, marketing, clothing, to my current role designing landing pages.
+                        Lately my time is spent designing and prototyping. I get a lot of my inspo from videogames, cartoons and anime as you can see.</p>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <img class="img-fluid gif2" src="/assets/img/k9.gif" alt="a">
@@ -92,7 +86,7 @@
                                 alt="...">
                             <div class="card-img-overlay">
                                 <h5 class="card-title">Iguana Page</h5>
-                                <p class="card-text">This is a wider card.</p>
+                                <p class="card-text">outdated.</p>
                         </a>
                     </div>
                 </div>
@@ -103,7 +97,7 @@
                             alt="...">
                         <div class="card-img-overlay">
                             <h5 class="card-title">Landing Page</h5>
-                            <p class="card-text">This is a wider card.</p>
+                            <p class="card-text">outdated.</p>
                     </a>
                 </div>
             </div>
@@ -113,7 +107,7 @@
                 <a href="/pages/cuppon.html"><img src="/assets/img/cupponejemplo.png" class="card-img" alt="...">
                     <div class="card-img-overlay">
                         <h5 class="card-title">Cuppon</h5>
-                        <p class="card-text">This is a wider card.</p>
+                        <p class="card-text">outdated.</p>
                 </a>
             </div>
         </div>
